--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "mongoose": "^8.8.1",
     "socket.io": "^4.8.1",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/ws": "^8.5.13"
   }
 }
