--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
-    "dev": "tsc -b"
+    "dev": "tsc-watch --onSuccess \"yarn start\""
   },
   "author": "",
   "license": "ISC",
