--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI = "mongodb://localhost:27017/metaverserealms"
+MONGO_URI = "mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.0"
 JWT_SECRET = "AshutoshPaliwal26"
 PORT = 8000
