--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "tsc-watch --onSuccess \"yarn start\"",
-    "build" : "tsc -b"
+    "build": "tsc -b"
   },
   "author": "",
   "license": "ISC",
@@ -17,17 +17,16 @@
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mediasoup": "^3.15.2",
     "mongoose": "^8.8.1",
     "socket.io": "^4.8.1",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.6.3",
-    "ws": "^8.18.0"
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/ws": "^8.5.13"
+    "@types/jsonwebtoken": "^9.0.7"
   }
 }
